--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
-    "vue": "^3.5.22",
     "tailwindcss": "^4.1.17",
+    "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.37.0",
@@ -29,7 +31,11 @@
     "globals": "^16.4.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.0",
     "vite": "^7.1.11",
-    "vite-plugin-vue-devtools": "^8.0.3"
+    "vite-plugin-vue-devtools": "^8.0.3",
+    "vue-eslint-parser": "^10.2.0",
+    "vue-tsc": "^3.1.5"
   }
 }
