--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@tanstack/vue-query": "^5.92.1",
+    "@vee-validate/zod": "^4.15.1",
     "tailwindcss": "^4.1.17",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
