--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "preview": "vite preview",
     "lint": "eslint . --fix --cache",
     "format": "prettier --write src/",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "test": "vitest --no-watch",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@tanstack/vue-query": "^5.92.1",
     "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^14.1.0",
     "tailwindcss": "^4.1.17",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
@@ -27,18 +30,25 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/vue": "^8.1.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.37.0",
     "eslint-plugin-vue": "~10.5.0",
     "globals": "^16.4.0",
+    "jsdom": "^27.3.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3",
+    "vitest": "^4.0.15",
+    "vitest-types": "^0.1.3",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.5"
   }
